# sb1-mar23

./: .env  .env.example  .env.production  .env.production.template  .gitignore  EXCHANGE_SETUP.md  PRODUCTION.md  README.md  RUST_API_INTEGRATION_STATUS.md  RUST_SETUP.md  TESTNET_SETUP.md  apache-config.conf  build-prod.js  deploy-production.sh  deploy.sh  docker-compose.yml  ecosystem.config.js  index.html  install-netlify-deps.js  install-rust.js  jest.config.ts  keep-alive.js  keep-alive.mjs  netlify-build.sh  netlify.toml  nodemon.config.json  nodemon.json  package-lock.json  package.json  preview-prod.js  proxy-server.Dockerfile  proxy-server.js  router-test.html  start-prod.js  start-production.sh  start-servers.js  start-servers.mjs  start.sh  tailwind.config.js  terminal  (+6 more)
backend/rust/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  prometheus.yml  start.sh  test_api.py  test_api.sh
backend/rust/src/: config.rs  error.rs  main.rs
backend/rust/src/api/: middleware.rs  mod.rs  routes.rs
backend/rust/src/api/handlers/: auth_handlers.rs  exchange_handlers.rs  market_handlers.rs  (+5 more)
backend/rust/src/background/: mod.rs  monitor.rs  scheduler.rs  trade_processor.rs
backend/rust/src/db/: mod.rs  supabase.rs
backend/rust/src/models/: budget.rs  market_data.rs  mod.rs  strategy.rs  trade.rs  user.rs
backend/rust/src/services/: auth_service.rs  deepseek_service.rs  exchange_service.rs  market_service.rs  mod.rs  news_service.rs  strategy_service.rs  trade_service.rs
backend/rust/src/ws/: messages.rs  mod.rs  routes.rs  server.rs  session.rs
(+635 files in other folders)
