[package]
name = "trading-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-cors = "0.6.4"
actix-web-actors = "4.2.0"

# WebSockets
actix = "0.13.0"
actix-web-lab = "0.19.1"

# Async
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"

# Serialization
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

# Database
postgrest = "1.6.0"

# Authentication
jsonwebtoken = "8.3.0"

# Logging
log = "0.4.17"
env_logger = "0.10.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Error handling
thiserror = "1.0.40"
anyhow = "1.0.71"

# Configuration
config = "0.13.3"
dotenv = "0.15.0"

# Utilities
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
rand = "0.8.5"
lazy_static = "1.4.0"

# HTTP client
reqwest = { version = "0.11.17", features = ["json", "rustls-tls"] }

# Metrics
prometheus = "0.13.3"
actix-web-prom = "0.6.0"

# Rate limiting
governor = "0.5.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
